# clixon_plugin

./: CMakeLists.txt
src/: CMakeLists.txt  exceptions.hpp  logger.hpp  main.cpp
src/fmt/: args.h  base.h  chrono.h  color.h  compile.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
